tests/NormalTests/paczka1/small_fuzzy/80181578.err
Error in line 1: MJF7PkRX A989 48,2
Error in line 2: 6RGxmr4D A989 95,3
Error in line 9: 6RGxmr4D S837 25,9
Error in line 14: yxCI A58 77,3
